# Kigu

./: .gitignore  CMakeLists.txt  Generate.bat  GenerateProjects.bat  README.md  conanfile_windows.txt  premake5.lua
Data/Shaders/: Basic.fs  Basic.vs
Dependencies/GLFW/: README.md
Dependencies/glad/: glad.c
Dependencies/glad/Include/glad/: glad.h
Dependencies/glad/Src/: glad.c
Dependencies/glad/include/glad/: glad.h
Example/: ExampleMain.cpp
Example/src/: Main.cpp
Kigu/include/: Application.h  AssetManifest.h  Components.h  Conditionals.h  Entity.h  Error.h  Event.h  Kigu.h  KiguMain.h  LoadingManager.h  MathLib.h  Scene.h  Window.h
Kigu/include/assets/: AssetManager.h
Kigu/include/engine/: Application.h  EngineCore.h  GraphicsContext.h  ImGuiLayer.h  Window.h
Kigu/include/events/: Event.h
Kigu/include/graphics/: Framebuffer.h  OpenGLContext.h  Renderer.h  Shader.h  ShaderCache.h  VertexArray.h
Kigu/include/util/: EnumMap.h  File.h  Log.h
Kigu/src/: AssetManifest.cpp  Event.cpp  Kigu.cpp  LoadingManager.cpp  Main.cpp  SomeData.cpp  SomeData.h  Window.cpp
Kigu/src/assets/: AssetManager.cpp
Kigu/src/engine/: Application.cpp  EngineCore.cpp  ImGuiLayer.cpp  OpenGLContext.cpp  Window.cpp
Kigu/src/graphics/: Framebuffer.cpp  OpenGLContext.cpp  Renderer.cpp  Shader.cpp  ShaderCache.cpp  VertexArray.cpp
Kigu/src/platform/opengl/: OpenGLContext.cpp  OpenGLContext.h
Kigu/src/platform/vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanExtensions.cpp  VulkanExtensions.h
Kigu/src/platform/windows/: Win64Window.cpp  Win64Window.h
Kigu/src/util/: File.cpp
